fix: Change plan route names
