# src/api/v1/routes/plan.routes.js
@@ -5,10 +5,10 @@ const cache = require('../middlewares/cache.middleware');
 // eslint-disable-next-line max-len
 const paramIdValidator = require('../middlewares/params-id-validator.middleware');
 
-router.route('/get-all').get(cache(controller), controller.fetchAllByQuery);
+router.route('/').get(cache(controller), controller.fetchAllByQuery);
 
 router
-    .route('/get/:id')
+    .route('/:id')
     .get(paramIdValidator, cache(controller), controller.fetchOneByParamsId);
 
 module.exports = router;
